// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card snapshots > css mode snapshot 1`] = `
"import React from 'react';
import styles from './Card.module.css';

export type CardVariant = 'default' | 'hoverable' | 'clickable';
export type CardSize    = 'sm' | 'md' | 'lg';

export interface CardProps {
  variant?:   CardVariant;
  size?:      CardSize;
  title?:     string;
  children:   React.ReactNode;
  onClick?:   () => void;
  className?: string;
  href?:      string;
}

export const Card: React.FC<CardProps> = ({
  variant = 'default',
  size = 'md',
  title,
  children,
  onClick,
  className,
  href,
}) => {
  const isClickable = variant === 'clickable' || !!onClick || !!href;
  
  const cls = [
    styles.card,
    styles[\`card--\${variant}\`],
    styles[\`card--\${size}\`],
    isClickable && styles['card--clickable'],
    className,
  ].filter(Boolean).join(' ');

  const handleKeyDown = (e: React.KeyboardEvent) => {
    if (isClickable && (e.key === 'Enter' || e.key === ' ')) {
      e.preventDefault();
      onClick?.();
      if (href) window.location.href = href;
    }
  };

  const Component = href ? 'a' : isClickable ? 'button' : 'article';

  return (
    <Component
      className={cls}
      onClick={onClick}
      href={href}
      role={href ? undefined : isClickable ? 'button' : 'article'}
      tabIndex={isClickable ? 0 : undefined}
      onKeyDown={isClickable ? handleKeyDown : undefined}
    >
      {title && <h3 className={styles.title}>{title}</h3>}
      <div className={styles.content}>{children}</div>
    </Component>
  );
};

Card.displayName = 'Card';
"
`;

exports[`Card snapshots > css mode snapshot 2`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

:root {
  --color-primary: #6C63FF;
  --color-secondary: #F3F2FF;
  --color-surface: #FFFFFF;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-danger: #E24B4A;
  --color-success: #1D9E75;
  --radius-sm: 4px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}


.card {
  display:        flex;
  flex-direction: column;
  background:     var(--color-surface);
  border:         1.5px solid var(--color-border);
  border-radius:  var(--radius-lg);
  color:          var(--color-text);
  font-family:    var(--font-family);
  overflow:       hidden;
  text-align:     left;
  width:          100%;
  padding:        0;
  margin:         0;
  text-decoration: none;
}

.title {
  margin:      0;
  padding:     calc(var(--spacing-unit) * 4);
  font-size:   1.1em;
  font-weight: 600;
  border-bottom: 1px solid var(--color-border);
}

.content {
  padding: calc(var(--spacing-unit) * 4);
}

.card:focus-visible {
  outline:        2px solid var(--color-primary);
  outline-offset: 3px;
}

/* Sizes */
.card--sm { max-width: 300px; }
.card--md { max-width: 450px; }
.card--lg { max-width: 600px; }

/* Variants */
.card--hoverable:hover {
  border-color: var(--color-primary);
  box-shadow:   0 4px 12px rgba(0, 0, 0, 0.05);
}

.card--clickable {
  cursor: pointer;
  transition: transform 0.15s ease, box-shadow 0.15s ease, border-color 0.15s ease;
}

.card--clickable:hover {
  border-color: var(--color-primary);
  box-shadow:   0 8px 24px rgba(0, 0, 0, 0.1);
  transform:    translateY(-2px);
}

.card--clickable:active {
  transform:    translateY(0);
}
"
`;

exports[`Card snapshots > css mode snapshot 3`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import { Card } from './Card';

const meta: Meta<typeof Card> = {
  title: 'Crucible/Card',
  component: Card,
  parameters: { layout: 'centered' },
  argTypes: {
    variant: { control: 'select', options: ['default', 'hoverable', 'clickable'] },
    size:    { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Card>;

export const Default: Story = {
  args: {
    title:    'Card Title',
    children: 'This is a default card with some content inside it.',
  },
};

export const Hoverable: Story = {
  args: {
    variant:  'hoverable',
    title:    'Hoverable Card',
    children: 'This card changes its border color and shadow on hover.',
  },
};

export const Clickable: Story = {
  args: {
    variant:  'clickable',
    title:    'Clickable Card',
    children: 'This card acts like a button and has an active state.',
    onClick:  () => alert('Card clicked!'),
  },
};

export const Link: Story = {
  args: {
    variant:  'clickable',
    title:    'Link Card',
    children: 'This card acts like an anchor tag.',
    href:     'https://example.com',
  },
};
"
`;

exports[`Card snapshots > tailwind mode snapshot 1`] = `
"import React from 'react';

const variantClasses: Record<string, string> = {
  default: 'bg-[var(--color-surface)] border-[var(--color-border)]',
  hoverable: 'bg-[var(--color-surface)] border-[var(--color-border)] hover:shadow-lg',
  clickable: 'bg-[var(--color-surface)] border-[var(--color-border)] cursor-pointer hover:shadow-lg',
 };

const sizeClasses: Record<string, string> = {
  sm: 'p-4',
  md: 'p-6',
  lg: 'p-8',
};

export type CardVariant = 'default' | 'hoverable' | 'clickable';
export type CardSize    = 'sm' | 'md' | 'lg';

export interface CardProps {
  variant?:   CardVariant;
  size?:      CardSize;
  title?:     string;
  children:   React.ReactNode;
  onClick?:   () => void;
  className?: string;
  href?:      string;
}

export const Card: React.FC<CardProps> = ({
  variant = 'default',
  size = 'md',
  title,
  children,
  onClick,
  className,
  href,
}) => {
  const isClickable = variant === 'clickable' || !!onClick || !!href;
  
  const cls = [
    'rounded-[var(--radius-lg)] border-1.5 transition-all text-left w-full block',
    'focus-visible:outline focus-visible:outline-2 focus-visible:outline-[var(--color-primary)] focus-visible:outline-offset-2',
    variantClasses[variant],
    sizeClasses[size],
    className,
  ].filter(Boolean).join(' ');

  const handleKeyDown = (e: React.KeyboardEvent) => {
    if (isClickable && (e.key === 'Enter' || e.key === ' ')) {
      e.preventDefault();
      onClick?.();
      if (href) window.location.href = href;
    }
  };

  const Component = href ? 'a' : isClickable ? 'button' : 'article';

  return (
    <Component
      className={cls}
      onClick={onClick}
      href={href}
      role={href ? undefined : isClickable ? 'button' : 'article'}
      tabIndex={isClickable ? 0 : undefined}
      onKeyDown={isClickable ? handleKeyDown : undefined}
    >
      {title && <h3 className="font-bold text-lg mb-2 text-[var(--color-text)]">{title}</h3>}
      <div className="text-[var(--color-text-muted)]">{children}</div>
    </Component>
  );
};

Card.displayName = 'Card';
"
`;

exports[`Card snapshots > tailwind mode snapshot 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import { Card } from './Card';

const meta: Meta<typeof Card> = {
  title: 'Crucible/Card',
  component: Card,
  parameters: { layout: 'centered' },
  argTypes: {
    variant: { control: 'select', options: ['default', 'hoverable', 'clickable'] },
    size:    { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Card>;

export const Default: Story = {
  args: {
    title:    'Card Title',
    children: 'This is a default card with some content inside it.',
  },
};

export const Hoverable: Story = {
  args: {
    variant:  'hoverable',
    title:    'Hoverable Card',
    children: 'This card changes its border color and shadow on hover.',
  },
};

export const Clickable: Story = {
  args: {
    variant:  'clickable',
    title:    'Clickable Card',
    children: 'This card acts like a button and has an active state.',
    onClick:  () => alert('Card clicked!'),
  },
};

export const Link: Story = {
  args: {
    variant:  'clickable',
    title:    'Link Card',
    children: 'This card acts like an anchor tag.',
    href:     'https://example.com',
  },
};
"
`;
